fix swagger and others
