# pkg/api/admin/dto/template.go
@@ -1,0 +1,15 @@
+package dto
+
+// CreateTemplateRequest defines the request body for creating a new template.
+type CreateTemplateRequest struct {
+	Name     string `json:"name"`
+	BodyHTML string `json:"body_html"`
+	BodyText string `json:"body_text"`
+}
+
+// UpdateTemplateRequest defines the request body for updating an existing template.
+type UpdateTemplateRequest struct {
+	Name     string `json:"name"`
+	BodyHTML string `json:"body_html"`
+	BodyText string `json:"body_text"`
+}
